<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="146dp"
    android:minWidth="110dp"
    android:minHeight="40dp"
    android:transitionGroup="true"
    android:elevation="20dp"
    android:layout_height="74dp"
    tools:ignore="ExtraText">
    tools:context="papercup.digitalcurrencyconverter.MainActivity">

    <TextView
        android:text="@string/default_high_low_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lowPriceTextView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="false"
        android:layout_alignParentLeft="true"
        android:textSize="12sp"
        android:fontFamily="sans-serif-condensed" />

    <TextView
        android:text="@string/default_high_low_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/highPriceTextView"
        android:textSize="12sp"
        android:textAlignment="textEnd"
        android:layout_gravity="end"
        android:fontFamily="sans-serif-condensed"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="false"
        android:layout_alignParentRight="true" />

    <TextView
        android:text="@string/exchange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/exchangeTextView"
        android:textAlignment="center"
        android:textColor="#FFFF00"
        android:textSize="12sp"
        android:layout_alignParentTop="true"
        android:fontFamily="sans-serif-condensed"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/default_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lastPriceTextView"
        android:textColor="#FFFF00"
        android:fontFamily="sans-serif-condensed"
        android:layout_below="@id/exchangeTextView"
        android:textAlignment="center"
        android:layout_alignParentLeft="false"
        android:layout_alignParentRight="false"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/default_volume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lastPriceTextView"
        android:id="@+id/volumeTextView"
        android:textSize="12sp"
        android:textAlignment="center"
        android:layout_alignParentLeft="false"
        android:layout_alignParentRight="false"
        android:fontFamily="sans-serif-condensed"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/default_updated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lastUpdatedTextView"
        android:textSize="12sp"
        android:layout_below="@id/volumeTextView"
        android:textColor="#33CC00"
        android:fontFamily="sans-serif-condensed"
        android:layout_alignParentLeft="false"
        android:layout_alignParentRight="false"
        android:textAlignment="center"
        android:layout_centerHorizontal="true" />



</RelativeLayout>
