<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_configure"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="papercup.digitalcurrencyconverter.Configure">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/configureButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:text="@string/conf_button_text" />

    <TextView
        android:text="@string/conf_interval_text"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/refreshIntervalTitle"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:labelFor="@+id/refreshInterval"
        android:layout_marginTop="21dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:textColor="@android:color/background_light"
        android:textColorHighlight="@android:color/background_light"
        android:textColorHint="@color/colorAccent" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/refreshInterval"
        android:layout_alignBaseline="@+id/refreshIntervalTitle"
        android:layout_alignBottom="@+id/refreshIntervalTitle"
        android:layout_toEndOf="@+id/refreshIntervalTitle"
        android:layout_toRightOf="@+id/refreshIntervalTitle"
        android:layout_marginStart="38dp"
        android:layout_marginLeft="38dp"
        android:text="@string/default_interval_val"
        android:textColorHighlight="@android:color/background_light"
        android:textColorHint="@color/colorAccent"
        android:textColor="@android:color/background_light" />

</RelativeLayout>
